# online-video-downloader

./: .gitignore  CLAUDE.md  README.md  build-windows.ps1  plan.md  prompt.md  pyinstaller.spec  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
docs/: 数据源获取指南.md
ovd/: __init__.py  __main__.py  config.py  storage.py
ovd/api/: __init__.py  maccms.py
ovd/downloader/: __init__.py  jobs.py
ovd/static/: index.html
ovd/web/: __init__.py  app.py
tests/: test_jobs.py  test_maccms.py
