[project]
name = "online-video-downloader"
version = "0.1.0"
description = "面向 7080.wang 用户的本地视频搜索与下载工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "5shunchen" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "cryptography>=41.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pyinstaller>=6.0"]

[project.scripts]
ovd = "ovd.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ovd*"]

[tool.setuptools.package-data]
ovd = ["static/**/*"]
